--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
+            pip install -r requirements.txt
+            ls -ltr
 
 
       # Step 3: run linter and tests
@@ -23,6 +25,7 @@ jobs:
           name: Run unit tests
           command: |
             . venv/bin/activate
+            python3 -m unittest --verbose tests.test_extract tests.test_database
             python3 -m unittest
  
          
