--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,12 @@ jobs:
 
       # Step 3: run linter and tests
       - run:
-          name: Run unit tests
+          name: Run Task 2 unit tests
           command: |
             . venv/bin/activate
             python3 -m unittest --verbose tests.test_extract tests.test_database
+            python3 main.py inspect --name Halley
+
 
          
       # # Step 4 run API Tests 
