--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,18 +17,32 @@ jobs:
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
-            ls -ltr
 
 
-      # Step 3: run linter and tests
+      # Step 3: run task2  tests
       - run:
           name: Run Task 2 unit tests
           command: |
             . venv/bin/activate
             python3 -m unittest --verbose tests.test_extract tests.test_database
             python3 main.py inspect --name Halley
+            python3 main.py inspect --pdes 433
+            python3 main.py inspect --verbose --name Ganymed
 
 
+      # Step 4: run task3  tests
+      - run:
+          name: Run Task 2 unit tests
+          command: |
+            . venv/bin/activate
+            python3 main.py query --date 2020-01-01
+            python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31
+            python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31 --max-distance 0.1
+            python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31 --min-distance 0.3
+            python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31 --max-velocity 50
+            python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31 --min-velocity 25
+            python3 main.py query --min-diameter 0.5 --max-diameter 0.6 --not-hazardous
+            python3 main.py query --max-distance 0.1 --min-velocity 35 --min-diameter 2.5 --hazardous
          
       # # Step 4 run API Tests 
       # - run:
