--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,10 @@ jobs:
 
       # Step 4: run task3  tests
       - run:
-          name: Run Task 2 unit tests
+          name: Run Task 3 unit tests
           command: |
             . venv/bin/activate
+            python3 -m unittest tests.test_query tests.test_limit
             python3 main.py query --date 2020-01-01
             python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31
             python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31 --max-distance 0.1
@@ -43,6 +44,23 @@ jobs:
             python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31 --min-velocity 25
             python3 main.py query --min-diameter 0.5 --max-diameter 0.6 --not-hazardous
             python3 main.py query --max-distance 0.1 --min-velocity 35 --min-diameter 2.5 --hazardous
+
+      # Step 5: run full unit tests
+      - run:
+          name: Run Task Full unit tests
+          command: |
+            . venv/bin/activate
+            python3 -m unittest
+            python3 -m unittest --verbose
+
+      # Step 6: run output file tests
+      - run:
+          name: Run Task Full unit tests
+          command: |
+            . venv/bin/activate
+            python3 main.py query --date 2020-01-01 --limit 5 --outfile results.csv
+            python3 main.py query --date 2020-01-01 --limit 5 --outfile results.json
+            python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31 --hazardous --min-diameter 0.25 --max-distance 0.1 --limit 5 --outfile results.json
          
       # # Step 4 run API Tests 
       # - run:
