--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: circleci/python:3.8
 
     working_directory: ~/repo
-    
+
     parallelism: 4
     steps:
       # Step 1: obtain repo from GitHub
@@ -40,32 +40,31 @@ jobs:
             python3 main.py query --date 2020-01-01
             python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31
             python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31 --min-velocity 25
-            python3 main.py query --min-diameter 0.5 --max-diameter 0.6 --not-hazardous
             python3 main.py query --max-distance 0.1 --min-velocity 35 --min-diameter 2.5 --hazardous
 
-      # # Step 5: run full unit tests
-      # - run:
-      #     name: Run  Full unit tests
-      #     command: |
-      #       . venv/bin/activate
-      #       python3 -m unittest
+      # Step 5: run full unit tests
+      - run:
+          name: Run  Full unit tests
+          command: |
+            . venv/bin/activate
+            python3 -m unittest
 
-      # # Step 6: run output file tests
-      # - run:
-      #     name: Run Task Full unit tests
-      #     command: |
-      #       . venv/bin/activate
-      #       python3 main.py query --date 2020-01-01 --limit 5 --outfile results.csv
-      #       python3 main.py query --date 2020-01-01 --limit 5 --outfile results.json
-      #       python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31 --hazardous --min-diameter 0.25 --max-distance 0.1 --limit 5 --outfile results.json
-         
-      # # Step 4 run API Tests 
-      # - run:
-      #     name: Run API test methods
-      #     command: |
-      #       . venv/bin/activate
-      #         pyhttptest execute apitest.json
-          
+          # # Step 6: run output file tests
+          # - run:
+          #     name: Run Task Full unit tests
+          #     command: |
+          #       . venv/bin/activate
+          #       python3 main.py query --date 2020-01-01 --limit 5 --outfile results.csv
+          #       python3 main.py query --date 2020-01-01 --limit 5 --outfile results.json
+          #       python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31 --hazardous --min-diameter 0.25 --max-distance 0.1 --limit 5 --outfile results.json
+
+          # # Step 4 run API Tests
+          # - run:
+          #     name: Run API test methods
+          #     command: |
+          #       . venv/bin/activate
+          #         pyhttptest execute apitest.json
+
       # # Genarate output CSV File
       # - run:
       #     name: Generate Output CSV File
