--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,12 +79,13 @@ jobs:
             cat results.json
             echo "******************************"
 
-          # # Step 4 run API Tests
-          # - run:
-          #     name: Run API test methods
-          #     command: |
-          #       . venv/bin/activate
-          #         pyhttptest execute apitest.json
+      # Step 7 test parallel execution
+      - run:
+          name: Run API test methods
+          command: |
+            . venv/bin/activate
+            chmod u+x testrun.sh
+            ./testrun.sh
 
       # # Genarate output CSV File
       # - run:
