--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,15 +20,18 @@ jobs:
             pip install -r requirements.txt
 
 
-      # Step 3: run task2  tests
+      # Step 3: run smoke  tests
       - run:
           name: Run Task 2 unit tests
           command: |
             . venv/bin/activate
-            python3 -m unittest --verbose tests.test_extract tests.test_database &
-            python3 main.py inspect --name Halley &
-            python3 main.py inspect --pdes 433 &
-            python3 main.py inspect --verbose --name Ganymed &
+            python3 -m unittest
+            echo "___________SMOKE TEST PASSED_________________________"
+            echo "___________S U C C E S S !!!_________________________"
+            python3 -m unittest --verbose tests.test_extract tests.test_database
+            python3 main.py inspect --name Halley
+            python3 main.py inspect --pdes 433
+            python3 main.py inspect --verbose --name Ganymed
 
 
       # Step 4: run task3  tests
