--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
 
       # Step 3: run smoke  tests
       - run:
-          name: Run Task 2 unit tests
+          name: Run Smoke tests
           command: |
             . venv/bin/activate
             python3 -m unittest
@@ -33,54 +33,54 @@ jobs:
             python3 main.py inspect --pdes 433
             python3 main.py inspect --verbose --name Ganymed
 
-
-      # Step 4: run task3  tests
-      - run:
-          name: Run Task 3 unit tests
-          command: |
-            . venv/bin/activate
-            python3 -m unittest tests.test_query tests.test_limit
-            python3 main.py query --date 2020-01-01
-            python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31
-            python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31 --min-velocity 25
-            python3 main.py query --max-distance 0.1 --min-velocity 35 --min-diameter 2.5 --hazardous
-
-      # Step 5: run full unit tests
-      - run:
-          name: Run  Full unit tests
-          command: |
-            . venv/bin/activate
-            python3 -m unittest
-
-      # Step 6: run output file tests
-      - run:
-          name: Run Task Full unit tests
-          command: |
-            . venv/bin/activate
-            echo "******************************"
-            echo "Check the output file"
-            echo "******************************"
-            ls -lah results*
-            echo "******************************"
-            echo "Remove the old output files"
-            rm -rf results*
-            echo "******************************"
-            echo "Generate the output file"
-            python3 main.py query --date 2020-01-01 --limit 5 --outfile results.csv
-            echo "******************************"
-            echo "Check the content of the output file"
-            python3 main.py query --date 2020-01-01 --limit 5 --outfile results.json
-            echo "******************************"
-            cat results.csv
-            echo "******************************"
-            cat results.json
-            echo "******************************"
-            python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31 --hazardous --min-diameter 0.25 --max-distance 0.1 --limit 5 --outfile results.json
-            echo "******************************"
-            cat results.csv
-            echo "******************************"
-            cat results.json
-            echo "******************************"
+#
+#      # Step 4: run task3  tests
+#      - run:
+#          name: Run Task 3 unit tests
+#          command: |
+#            . venv/bin/activate
+#            python3 -m unittest tests.test_query tests.test_limit
+#            python3 main.py query --date 2020-01-01
+#            python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31
+#            python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31 --min-velocity 25
+#            python3 main.py query --max-distance 0.1 --min-velocity 35 --min-diameter 2.5 --hazardous
+#
+#      # Step 5: run full unit tests
+#      - run:
+#          name: Run  Full unit tests
+#          command: |
+#            . venv/bin/activate
+#            python3 -m unittest
+#
+#      # Step 6: run output file tests
+#      - run:
+#          name: Run Task Full unit tests
+#          command: |
+#            . venv/bin/activate
+#            echo "******************************"
+#            echo "Check the output file"
+#            echo "******************************"
+#            ls -lah results*
+#            echo "******************************"
+#            echo "Remove the old output files"
+#            rm -rf results*
+#            echo "******************************"
+#            echo "Generate the output file"
+#            python3 main.py query --date 2020-01-01 --limit 5 --outfile results.csv
+#            echo "******************************"
+#            echo "Check the content of the output file"
+#            python3 main.py query --date 2020-01-01 --limit 5 --outfile results.json
+#            echo "******************************"
+#            cat results.csv
+#            echo "******************************"
+#            cat results.json
+#            echo "******************************"
+#            python3 main.py query --start-date 2020-01-01 --end-date 2020-12-31 --hazardous --min-diameter 0.25 --max-distance 0.1 --limit 5 --outfile results.json
+#            echo "******************************"
+#            cat results.csv
+#            echo "******************************"
+#            cat results.json
+#            echo "******************************"
 #
 #      # Step 7 test parallel execution
 #      - run:
