--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,9 @@ jobs:
             echo "___________SMOKE TEST PASSED_________________________"
             echo "___________S U C C E S S !!!_________________________"
             python3 -m unittest --verbose tests.test_extract tests.test_database
-            python3 main.py inspect --name Halley
-            python3 main.py inspect --pdes 433
-            python3 main.py inspect --verbose --name Ganymed
+#            python3 main.py inspect --name Halley
+#            python3 main.py inspect --pdes 433
+#            python3 main.py inspect --verbose --name Ganymed
 
 #
 #      # Step 4: run task3  tests
